--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
+# Rust build artifacts
 /target/
+**/*.rs.bk
+
+# Cargo.lock is typically committed for binaries but not libraries
+# Since this is a library, we ignore it
+Cargo.lock
+
+# IDE / Editor
+.idea/
+.vscode/
+*.iml
+*.swp
+*.swo
+*~
+.*.sw?
+
+# OS generated
+.DS_Store
+Thumbs.db
+
+# Test/coverage artifacts
+*.profraw
+*.profdata
+lcov.info
+tarpaulin-report.html
+
+# Local development
+.env
+*.local
