--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "voice-core"
-version = "0.1.0"
+name = "voicecore"
+version = "0.1.1"
 edition = "2021"
 authors = ["Dotan Cohen"]
-license = "MIT"
-repository = "https://github.com/dotancohen/voice-core"
-description = "Core library for Voice note-taking application"
+license = "GPL-3.0"
+repository = "https://github.com/dotancohen/voicecore"
+description = "Core library for Voice note-taking application family."
 
 [lib]
-name = "voice_core"
+name = "voicecore"
 crate-type = ["rlib", "cdylib"]
 
 [features]
