--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,15 +20,16 @@ desktop = ["dep:hostname", "dep:dirs"]
 # UniFFI bindings for mobile (Android/iOS)
 uniffi = ["dep:uniffi"]
 # Cloud file storage (S3, Backblaze B2, etc.)
-file-storage = ["dep:aws-sdk-s3", "dep:aws-config"]
+# Using rust-s3 instead of aws-sdk-s3 for much faster compilation and smaller binary
+file-storage = ["dep:rust-s3"]
 
 [dependencies]
 # Async runtime - use lighter features for mobile
 tokio = { version = "1.42", features = ["rt", "sync", "time", "macros", "fs"] }
 
 # Cloud storage (optional - for file_storage feature)
-aws-sdk-s3 = { version = "1.0", optional = true }
-aws-config = { version = "1.0", optional = true }
+# rust-s3 is much lighter than aws-sdk-s3 (~15 deps vs ~150+)
+rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"], optional = true }
 
 # Database
 rusqlite = { version = "0.32", features = ["bundled", "blob"] }
